import java.util.List;

class Artist {
    private int id;
    private String name;
    private String biography;
    private String country;
    private String avatarUrl;
    private List<Album> albums;
    private List<Song> songs;
}
