class Single extends Song {
}
