import java.util.List;

class Song {
    private int id;
    private String title;
    private int duration;
    private String fileUrl;
    private List<Artist> artists;
    private long playCount;
}
